feat: added font jetbrains mono

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <title>word</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id="text-container">
-      <textarea placeholder="Write here..." autofocus></textarea>
-    </div>
-  </body>
+
+<head>
+  <title>word</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/style.css" rel="stylesheet">
+  <!--JetBrains mono font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@600&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+  <div id="text-container">
+    <textarea placeholder="Write here..." autofocus></textarea>
+  </div>
+</body>
+
 </html>
